# KoppJson

./: CMakeLists.txt  MakingLog.md  ToolsTest.cpp  build.bat  hh.txt  readme.md
include/: KoppJson.h  KoppTemplate.hpp  KoppTools.h
json/: aaa.txt
src/: KoppBuild.cpp  KoppJsonPtr.cpp  KoppTools.cpp  KoppValue.cpp
test/: KoppTest.cpp  KoppTest2_0.cpp
